2004-09-11  Rich Kilmer <rich@infoether.com>

  * lib/rubygems/gem_commands.rb - got rid of stub options

  * lib/rubygems/install.rb - changed output of messages so the UI would format
    better 

  * bin/gem_server - exit! from ^c

2004-09-09  Chad Fowler <chad@chadfowler.com>
  * lib/rubygems/loadpath_manager.rb: Small bug when gem specs have ruby 
  version requirements.
  * lib/rubygems/specification.rb, lib/rubygems/gem_commands.rb: Fixed failing
  functional test.

2004-09-08  Chad Fowler <chad@chadfowler.com>
  * install.rb: added stub removal to the install process

2004-09-06  Chad Fowler <chad@chadfowler.com>
  * test/test_package.rb: Fixed failing unit test as per Mauricio's email to 
   the rubygems list.
  * Fixed minor issues with Windows cmd file generation.

2004-09-06  Rich Kilmer <rich@infoether.com>
  * lib/rubygems/remote_installer.rb - enabled caching of source caches
     based on the size of the yaml.Z/yaml file.
     
2004-08-29  Chad Fowler <chad@chadfowler.com>
	* /lib/rubygems/gem_command.rb: small big fix for local gem installs
	on Windows.

2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems/installer.rb, /lib/rubygems/doc_manager.rb, 
          /lib/rubygems/cmd_manager.rb - Added an exception: FilePermissionError
          which checks to ensure write access to the install/uninstall/rdoc 
          destination directories and raises a nice error instead of the standard
          one. 

2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems/installer.rb - commented out stub addition and removal

2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems.rb, /lib/rubygems/loadpath_manager.rb -
         this adds all the loadpath_manager stuff with the 'ultimate require hack' to
         rubygems.rb.  Also, require_gem methods body has been extracted into a method
         Gem.activate that differs in the calling signature in that the second param is